--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -22,16 +22,40 @@
 
 <div class="main main-raised">
     <div class="container">
-        <div class="section text-center">
+        <div class="section">
             <h2 class="title">Posts</h2>
-            {% for post in post_list %}
-            <h1>
-                <a href={{ post.get_absolute_url }}>
-                    {{ post.title }}
-                </a>
-            </h1>
-            {% endfor %}
+            <div class="row mt-5">
+                {% for post in post_list %}
+                <div class="col-12 col-md-6 col-lg-4 mb-3">
+                    <div class="card h-100">
+                        <a href="{{ post.get_absolute_url }}">
+                            <img class="card-img-top" src="https://picsum.photos/500" rel="nofollow"
+                                alt="Card image cap">
+                        </a>
+                        <div class="card-body">
+                            <div>
+                                <a href="{{ post.get_absolute_url }}" class="text-dark">
+                                    <h4 class="card-title">{{ post.title|title }}</h4>
+                                </a>
+                                <p class="card-text">{{ post.body|truncatewords:30|linebreaks }}</p>
+                            </div>
+                        </div>
+                        <div class="card-footer d-flex justify-content-between">
+                            <div>
+                                {{ post.updated|date:"jS M" }}
+                            </div>
+                            <div>
+                                {{ post.author }}
+                                <i class="{{ post.author.country.flag_css }}"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
         </div>
+
+        {% include '_pagination.html' %}
     </div>
 </div>
 
