--- a/places/templates/places/place_list.html
+++ b/places/templates/places/place_list.html
@@ -22,7 +22,7 @@
 {% block content %}
 <div class="main main-raised">
     <div class="container pt-5 mb-3">
-        <div class="section text-center">
+        <div class="section">
             <h2 class="title">Places</h2>
             <div class="row mt-5">
 
@@ -36,7 +36,7 @@
                         <div class="card-body">
                             <div>
                                 <a href="{{ place.get_absolute_url }}" class="text-dark">
-                                    <h4 class="card-text">{{ place.name|title }}</h4>
+                                    <h4 class="card-title">{{ place.name|title }}</h4>
                                 </a>
                                 <p class="card-text">{{ place.description }}</p>
                             </div>
