--- a/places/templates/places/place_detail.html
+++ b/places/templates/places/place_detail.html
@@ -1,28 +1,103 @@
 {% extends '_base.html' %}
+{% load static %}
 
 {% block title %}{{ place.name|title }}{% endblock title %}
-{% block page %}landing-page sidebar-collapse{% endblock page %}
-{% block content %}
 
-<div class="page-header bg-dark">
-    <div class="container">
-        <div class="row mt-5">
-            <div class="col-12 col-md-6 mb-3 ml-auto mr-auto">
-                <div class="card">
-                    <img class="card-img-top" src="https://picsum.photos/500" rel="nofollow" alt="Card image cap">
-                    <div class="card-body">
-                        <div>
-                            <h4 class="card-text">{{ place.name|title }}</h4>
-                            <p class="card-text">{{ place.description }}</p>
+{% block page-type %}profile-page sidebar-collapse{% endblock page-type %}
+
+{% block header %}
+<div class="page-header header-filter" data-parallax="true"
+    style="background-image: url({% static 'pages/img/city-profile.jpg' %});"></div>
+{% endblock header %}
+
+{% block content %}
+<div class="main">
+    <div class="profile-content">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 ml-auto mr-auto">
+                    <div class="profile">
+                        <div class="avatar">
+                            <img src="{% static 'pages/img/faces/christian.jpg' %}" alt="Circle Image"
+                                class="img-raised rounded-circle img-fluid">
+                        </div>
+                        <div class="name">
+                            <h1>{{ place.name|title }}</h1>
+                            <h3>{{ place.ratings }} ratings</h3>
+                            <h3>{{ place.host|title }}</h3>
+                            <h6>{{ place.email|title }}</h6>
+                            <a href="#pablo" class="btn btn-just-icon btn-link btn-dribbble"><i
+                                    class="fa fa-dribbble"></i></a>
+                            <a href="#pablo" class="btn btn-just-icon btn-link btn-twitter"><i
+                                    class="fa fa-twitter"></i></a>
+                            <a href="#pablo" class="btn btn-just-icon btn-link btn-pinterest"><i
+                                    class="fa fa-pinterest"></i></a>
                         </div>
                     </div>
-                    <div class="card-footer d-flex justify-content-between">
-                        <div>
-                            {{ place.updated_on|date:"jS M" }}
+                </div>
+            </div>
+            <div class="container text-center">
+                <p>{{ place.description }}</p>
+            </div>
+            <div class="row">
+                <div class="col-md-6 ml-auto mr-auto">
+                    <div class="profile-tabs">
+                        <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#studio" role="tab" data-toggle="tab">
+                                    <i class="material-icons">camera</i> Studio
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#works" role="tab" data-toggle="tab">
+                                    <i class="material-icons">palette</i> Work
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
+                                    <i class="material-icons">favorite</i> Favorite
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-content tab-space">
+                <div class="tab-pane active text-center gallery" id="studio">
+                    <div class="row">
+                        <div class="col-md-3 ml-auto">
+                            <img src="../assets/img/examples/studio-1.jpg" class="rounded">
+                            <img src="../assets/img/examples/studio-2.jpg" class="rounded">
                         </div>
-                        <div>
-                            {{ place.country.name }}
-                            <i class="{{ place.country.flag_css }}"></i>
+                        <div class="col-md-3 mr-auto">
+                            <img src="../assets/img/examples/studio-5.jpg" class="rounded">
+                            <img src="../assets/img/examples/studio-4.jpg" class="rounded">
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane text-center gallery" id="works">
+                    <div class="row">
+                        <div class="col-md-3 ml-auto">
+                            <img src="../assets/img/examples/olu-eletu.jpg" class="rounded">
+                            <img src="../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
+                            <img src="../assets/img/examples/cynthia-del-rio.jpg" class="rounded">
+                        </div>
+                        <div class="col-md-3 mr-auto">
+                            <img src="../assets/img/examples/mariya-georgieva.jpg" class="rounded">
+                            <img src="../assets/img/examples/clem-onojegaw.jpg" class="rounded">
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane text-center gallery" id="favorite">
+                    <div class="row">
+                        <div class="col-md-3 ml-auto">
+                            <img src="../assets/img/examples/mariya-georgieva.jpg" class="rounded">
+                            <img src="../assets/img/examples/studio-3.jpg" class="rounded">
+                        </div>
+                        <div class="col-md-3 mr-auto">
+                            <img src="../assets/img/examples/clem-onojeghuo.jpg" class="rounded">
+                            <img src="../assets/img/examples/olu-eletu.jpg" class="rounded">
+                            <img src="../assets/img/examples/studio-1.jpg" class="rounded">
                         </div>
                     </div>
                 </div>
@@ -30,5 +105,4 @@
         </div>
     </div>
 </div>
-
 {% endblock content %}
