--- a/backend/blog/templates/blog/post_detail.html
+++ b/backend/blog/templates/blog/post_detail.html
@@ -7,8 +7,8 @@
 {% block page-type %}profile-page sidebar-collapse{% endblock page-type %}
 
 {% block header %}
-<div class="page-header header-filter" data-parallax="true"
-    style="background-image: url({% static 'pages/img/city-profile.jpg' %});"></div>
+<div class="page-header" data-parallax="true" style="background-image: url({% static 'pages/img/city-profile.jpg' %});">
+</div>
 {% endblock header %}
 
 {% block content %}
