--- a/backend/places/templates/places/search_results.html
+++ b/backend/places/templates/places/search_results.html
@@ -2,8 +2,9 @@
 {% load static %}
 {% block title %}Search{% endblock title %}
 
+{% block page-type %}landing-page sidebar-collapse{% endblock page-type %}
 
-{% block header %}
+{% block content %}
 <div class="page-header" data-parallax="true" style="background-image: url({% static 'pages/img/bg3.jpg' %});">
     <div class="container">
         <div class="row">
@@ -16,9 +17,6 @@
         </div>
     </div>
 </div>
-{% endblock header %}
-
-{% block content %}
 <div class="main main-raised">
     <div class="container pt-5 mb-3">
         <div class="section">
